[package]
name = "syntect-tui"
version = "3.0.5"
edition = "2021"
license = "MIT"
description = "A lightweight translation layer between syntect.rs and Ratatui style types"
authors = ["Pierre Chanquion <{FORENAME}.{FIRST_FIVE_LETTERS_OF_SURNAME}.io>", "Mick Harrigan <mharrigan328@gmail.com>"]

[dependencies]
custom_error = "1.9.2"
ratatui = "0.29.0"
syntect = "5.0.0"

[dev-dependencies]
rstest = "0.22.0"
