[package]
name = "syntect-tui"
version = "3.0.5"
edition = "2021"
license = "MIT"
description = "A lightweight translation layer between syntect.rs and Ratatui style types"
authors = ["Pierre Chanquion <{FORENAME}.{FIRST_FIVE_LETTERS_OF_SURNAME}.io>", "Mick Harrigan <mharrigan328@gmail.com>"]

[dependencies]
custom_error = "1.9.2"
ratatui = { version = "0.29.0", default-features = false, features = ["underline-color"] }
syntect = { version = "5.0.0", default-features = false }

[dev-dependencies]
rstest = "0.22.0"
syntect = { version = "5.0.0", default-features = false, features = ["parsing", "regex-onig", "default-syntaxes", "default-themes"] }
